# active-flow

./: .gitignore  README.md  requirments.txt  setup.cfg  solve.py
data/hyperuniformity_analysis/reference data/: hyperuniform_point_ordering.txt
docs/: extrema_search.md  framework.md  hypreruniformity.md  parameters.md  simulation.md  steady_state_analysis.md
notebooks/: Extrema Search playground.ipynb  Hyperuniformity Analysis playground.ipynb  Plotting playground.ipynb  Simulation playground.ipynb  Steady State Analysis playground.ipynb
parameters/: extrema_search.yml  hyperuniformity_analysis.yml  simulation.yml  steady_state_analysis.yml
src/active_flow/: analysis_workflow.py
src/active_flow/extrema_search/: algorithm_tasks.py  postprocessing.py  workflow.py
src/active_flow/hyperuniformity_analysis/: algorithm_tasks.py  postprocessing.py  preprocessing.py  workflow.py
src/active_flow/simulation/: algorithm_tasks.py  workflow.py
src/active_flow/simulation/helpers/: register.py  time_stepping.py
src/extrema_search/: 0_workflow.py  algorithm_tasks.py  postprocessing.py  preprocessing.py  workflow.py
src/hyperuniformity_analysis/: 0_workflow.py  algorithm_tasks.py  postprocessing.py  preprocessing.py  workflow.py
src/simulation/: 0_workflow.py  algorithm_tasks.py  workflow.py
src/simulation/helpers/: time_stepping.py
src/steady_state_analysis/: 0_workflow.py  postprocessing.py  preprocessing.py  workflow.py
src/tests/: test_simulation_algorithm_tasks.py
