[metadata]
name = active_flow
description = Simulation tool for active substances, the tool contains the functionality of hyperuniformity checking
author = Abdelrahman Y A Altawil
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    active_flow
install_requires =
    neptune-client>=0.16.15
python_requires = >=3.9
package_dir =
    =src
zip_safe = no